UI/Resource/Css/20_page.css
#page article {
	margin-bottom: 50px;
}

#page article .content {
	margin-bottom: 25px;
}

#page article .more {
	display: inline-block;
	border: 1px #DDD solid;
	background: #EEE;
	padding: 5px 20px;
	text-align: center;
	text-decoration: none;
}

#page article .more:hover {
	color: #EEE;
	background: #333333;
}

#page .bar .new {
	float: left;
	text-align: left;
	display: inline-block;
	width: 120px;
	height: 20px;
}

#page .bar .old {
	float: right;
	text-align: right;
	display: inline-block;
	width: 120px;
	height: 20px;
}

#page .bar {
	text-align: center;
	font-size: 16px;
	line-height: 16px;
	overflow: hidden;
}

